rm sun.misc